# expenses_server_fastapi

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  test.py
expenses_server/: db.py  main.py  seed_db.py
expenses_server/db_models/: account.py  category.py  expense.py
expenses_server/dtos/: accounts.py  expenses.py
expenses_server/routes/: accounts.py  expenses.py
expenses_server_fastapi/: db.py  main.py  seed_db.py
expenses_server_fastapi/db_models/: account.py  accounts.py  category.py  expense.py
expenses_server_fastapi/dtos/: accounts.py  categories.py  expenses.py
expenses_server_fastapi/routes/: accounts.py  expenses.py
